	* arch/arm/src/armv7-a/arm_head.S and cache.h:  On start-up, make
	  certain the the MMU and caches are disabled (probably un-necessary)
	  (2014-4-2).
	* arch/arm/src/sama5/sam_boot.c:  If we have to copy vectors, then
	  make sure to clean the DCache to be sure that the copied vectors are
	  in the physical RAM (2014-4-2).
	* arch/arm/src/sama5/sam_irq.c:  After we modify the AXI MATRIX, make
	  sure to invalidate all caches and TLBs (probably un-necessary)
	  (2014-4-2).
	* arch/arm/src/sama5/sam_irq.c: Set the VBAR register to zero.  If
	  were started by a bootloader (vs. a RESET), then the VBAR register
	  may not be in its reset state (zero, 2014-4-3).
	* arch/arm/src/sama5/sam_boot.c, sam_irq.c, and chip/sama5d3x_memorymap.h:
	  When booting from SDRAM, don't relocated vectors to ISRAM.  Instead,
	  just set the VBAR register to address of the vectors in SDRAM.
	* arch/arm/src/sama5/sam_clockconfig.c: BMS Fixed to match what the HW
	  does.  From David Sidrane (2014-4-3).
	* arch/arm/src/sama5/Kconfig, sam_boot.c, andsam_clockconfig.c:  On some
	  hardware, reconfiguring the PLL while executing out of NOR FLASH causes
	  crashes.  This was fixed by David Sidrane by implementing RAM functions.
	  The killer code is copied and executed from ISRAM and the crash is
	  avoided (2014-4-3).
	* configs/sama5d3-xplained/Kconfig and include/board*.h;
	  configs/sama5d3x-ek/Kconfig and include/board*.h:  Add support for
	  528MHz CPU clock (2014-4-3).
	* arch/arm/src/sama5/Make.defs:  Fix a build error that occurs when
	  only USB device tracing is enabled (2014-4-4).
	* Documentation/UsbTrace.html:  Add some discussion of the USB monitor
	  (2014-4-4).
	* nuttx/arch/arm/src/armv7-a/mmu.h:  Bufferable bit did not do what
	  I thought it was going to do.  Result was the NOR FLASH accesses
	  were very slow (2014-4-3).
	* arch/arm/src/sama5/sam_udphs.c:  Fix a case where received status
	  was not clear, causing OUT SETUP commands to fail (2014-4-6).
